# origin

./: .gitignore.txt
Lesson 1/Task/: Task.sln
Lesson 1/Task/Task/: Task.cpp  Task.vcxproj
Lesson 10/Task 1/: CMakeLists.txt  My_first_cmake_program.cpp
Lesson 10/Task 2/: CMakelists.txt  Equilateral_Triangle.h  Figure.cpp  Figure.h  Main.cpp  Parallelogram.cpp  Parallelogram.h  Right_Triangle.h  Square.cpp  Triangle.h
Lesson 11/Task 1/: GreeterLibraryStatic.sln
Lesson 11/Task 1/Greet_hello/: Greet_hello.cpp  Greet_hello.vcxproj  Greet_hello.vcxproj.filters
Lesson 11/Task 2/: Task 2.sln
Lesson 11/Task 3/: CMakeLists.txt
Lesson 11/Task 4/: Task 4.sln
Lesson 11/Task 4/FigureDynamicLib/: Figure.h  (+7 more)
Lesson 11/Task 5/: CMakeLists.txt  Equilateral_Triangle.cpp  Equilateral_Triangle.h  Figure_DLL.cpp  Isosceles_Triangle.cpp  Isosceles_Triangle.h  Parallelogram.h  Quadrilateral.cpp  Quadrilateral.h  Rectangle.cpp  Rectangle.h  Rhomb.h  Right_Triangle.h  Square.cpp  Square.h  Triangle.cpp
Lesson 2/Task 1/: Task 1.sln
Lesson 2/Task 2/: Task 2.sln
Lesson 2/Task 3/: Task 3.sln
Lesson 3/Task 1/: Task 1.sln
Lesson 3/Task 2/: Task 2.sln
Lesson 4/Task 1/: Task 1.sln
Lesson 4/Task 2/: Task 2.sln
Lesson 5/Task 1/: Task 1.sln
Lesson 5/Task 2/: Task 2.sln
Lesson 5/Task 3/: Task 3.sln
Lesson 6/Task 1/: Task 1.sln
Lesson 6/Task 2/: Task 2.sln
Lesson 6/Task 3/: Task 3.sln
Lesson 7/Task 1/: Task 1.sln
Lesson 7/Task 2/: Task 2.sln
Lesson 8/Task 1/: Task 1.sln
Lesson 8/Task 2/: Task 2.sln
Lesson 9/Task 1/: Task 1.sln
Lesson 9/Task 2/: Task 2.sln
(+310 files in other folders)
